# bass

./: Cargo.toml  README.md  bass-25691d6c2fb2d9b7.js  bass-25691d6c2fb2d9b7_bg.wasm  bass-26f73cdf3365cdf9.js  bass-26f73cdf3365cdf9_bg.wasm  bass-5381ad0823f30f26.js  bass-5381ad0823f30f26_bg.wasm  bass-5e051c1da70dcdc5.js  bass-5e051c1da70dcdc5_bg.wasm  bass-8becf399fe10ba36.js  bass-8becf399fe10ba36_bg.wasm  bass-a365d8ae93486f02.js  bass-a365d8ae93486f02_bg.wasm  bass-a56dd0ce3a44f87c.js  bass-a56dd0ce3a44f87c_bg.wasm  bass-c1355fc29bd45564.js  bass-c1355fc29bd45564_bg.wasm  bass-c5e99bda9bb0a194_bg.wasm  bass-e5227b4e060fabd3_bg.wasm  bass-ee3b5b87be63b82.js  bass-ee3b5b87be63b82_bg.wasm  index.html
.github/workflows/: deploy.yml
src/: Trunk.toml  main.rs
src/components/: chart.rs  footer.rs  header.rs  mod.rs  slider.rs
src/components/context_menu/: item.rs  menu.rs  mod.rs
src/components/sandbox/: canvas.rs  controls.rs  mod.rs  model.rs
src/sim/: assignment.rs  mod.rs  simulation.rs
static/: styles.css
