[package]
name = "bass"
version = "0.1.0"
edition = "2024"

[dependencies]
yew = { version = "0.23.0", features = ["csr"] }
web-sys = { version = "0.3.94", features = ["Element", "HtmlCanvasElement", "CanvasRenderingContext2d", "DomRect"] }
rand_distr = "0.6.0"
rand = "0.10.0"
web-time = "1.1.0"
getrandom = { version = "0.4.2", features = ["wasm_js"] }